Other contacts UI overlapping issue fixed

--- a/assets/css/agent-customer.css
+++ b/assets/css/agent-customer.css
@@ -12990,13 +12990,13 @@ tr.t-dialer-b > td {
 .contact-d-nf-wrapper-052017 {
     position: absolute;
     background: #fff;
-    top: 40px;
+    top: 53px;
     left: 0;
     right: 0;
     z-index: 9;
     bottom: 0;
     text-align: center;
-    padding-top: 60px;
+    padding-top: 40px;
 }
 
 /*action btn wrapper */
